# nothing-actually-happens

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  live_config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-15-polymarket-backtester.md  2026-04-16-dedup-backtest-selection.md  2026-04-19-collector-expansion.md  2026-04-19-revert-and-regen.md  2026-04-19-trades-collector.md  2026-04-21-live-favorites-multistrategy.md
scripts/: migrate_live.py  serve_dashboard.sh  serve_dashboard_local.sh  trades_catchup.sh
src/: logging_setup.py
src/backtester/: engine.py  metrics.py  selection.py  strategies.py
src/collector/: categories.py  polygon_chain.py  polymarket_api.py  price_history.py  runner.py
src/dashboard/: app.py  trades_tab.py
src/live/: bankroll.py  config.py  executor.py  favorites.py  notifier.py  open_markets.py  quotes.py  resolution.py  runner.py  signals.py  sizing.py
src/storage/: db.py  models.py
tests/: conftest.py  test_categories.py  test_collector_runner.py  test_dashboard_candidates.py  test_engine.py  test_live_bankroll.py  test_live_config.py  test_live_executor.py  test_live_favorites.py  test_live_notifier.py  test_live_open_markets.py  test_live_quotes.py  test_live_resolution.py  test_live_runner.py  test_live_signals.py  test_live_signals_multistrategy.py  test_live_sizing.py  test_metrics.py  test_models.py  test_polygon_chain.py  test_polymarket_api.py  test_price_history.py  test_selection.py  test_strategies.py  test_trades_polymarket.py  test_trades_runner.py  test_trades_schema.py  test_trades_tab.py
(+9 files in other folders)
